; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_push.c_set_push_cert_flags.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_push.c_set_push_cert_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRANSPORT_PUSH_CERT_ALWAYS = common dso_local global i32 0, align 4
@TRANSPORT_PUSH_CERT_IF_ASKED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @set_push_cert_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_push_cert_flags(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %34 [
    i32 128, label %6
    i32 130, label %14
    i32 129, label %24
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @TRANSPORT_PUSH_CERT_ALWAYS, align 4
  %8 = load i32, i32* @TRANSPORT_PUSH_CERT_IF_ASKED, align 4
  %9 = or i32 %7, %8
  %10 = xor i32 %9, -1
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, %10
  store i32 %13, i32* %11, align 4
  br label %34

14:                                               ; preds = %2
  %15 = load i32, i32* @TRANSPORT_PUSH_CERT_ALWAYS, align 4
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %16, align 4
  %18 = or i32 %17, %15
  store i32 %18, i32* %16, align 4
  %19 = load i32, i32* @TRANSPORT_PUSH_CERT_IF_ASKED, align 4
  %20 = xor i32 %19, -1
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %20
  store i32 %23, i32* %21, align 4
  br label %34

24:                                               ; preds = %2
  %25 = load i32, i32* @TRANSPORT_PUSH_CERT_IF_ASKED, align 4
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* %26, align 4
  %28 = or i32 %27, %25
  store i32 %28, i32* %26, align 4
  %29 = load i32, i32* @TRANSPORT_PUSH_CERT_ALWAYS, align 4
  %30 = xor i32 %29, -1
  %31 = load i32*, i32** %3, align 8
  %32 = load i32, i32* %31, align 4
  %33 = and i32 %32, %30
  store i32 %33, i32* %31, align 4
  br label %34

34:                                               ; preds = %2, %24, %14, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
